2002-06-17  David N. Welton  <davidw@dedasys.com>

	* src/make.tcl: Updated build scripts to build the HTML
	documentation from XML files.

	* src/buildscripts/aardvark.tcl: Changed commands to 'sh' for
	shell commands and 'tcl' for Tcl commands.

2002-06-10  David N. Welton  <davidw@dedasys.com>

	* doc/packages/dio/dio.xml: Further updates.

2002-06-08  David N. Welton  <davidw@dedasys.com>

	* doc/packages/dio/dio.xml: Finished up adding material to
	dio.xml.

2002-06-06  David N. Welton  <davidw@dedasys.com>

	* doc/packages/dio/dio.xml: Initial commit of (incomplete) docbook
	documentation.

	* doc/packages/dio/rivet.xsl: Added XSL file for docbook
	documentation.

2002-05-03  David N. Welton  <davidw@dedasys.com>

	* src/TclWebapache.c (TclWeb_GetVarAsList): Added check to length
	to make sure we fully compare the two variables.  Idem for
	TclWeb_VarExists.

2002-04-19  Damon J. Courtney <damon@unreality.com>
	* src/TclWebapache.c
	    Added 'TclWeb_GetVirtualFile' command which returns the full
	    path to a virtual file.

	* src/rivetCore.c
	    Added command 'virtual_filename' to return the full path to a
	    virtual file.

	    Added -virtual option to include and parse commands to enable
	    them to parse a virtual file which is relative to the webserver.

2002-03-26  Damon J. Courtney <damon@unreality.com>

	* rivet/packages/form
	    Added a new package for handling forms in Rivet.

2002-03-26  Damon J. Courtney <damon@unreality.com>

	* src/TclWebapache.c
	    Moved the setting of include variables from LoadEnv to the
	    InitEnv command.  This will allow us to retrieve these variables
	    via the env command as well as load_env.

2002-03-21  Damon J. Courtney <damon@unreality.com>

	* src/TclWebapache.c
	* src/TclWeb.h
	    Added new command 'TclWeb_HeaderAdd'.

	* src/rivetCore.c
	    Added 'add' option to headers command to add a header instead
	    of just setting over one.

	* rivet/rivet-tcl/cookie.tcl