@@ -1,3 +1,8 @@
+2002-06-18  David N. Welton  <davidw@dedasys.com>
+
+	* cvsversion.tcl: Added tool to manage version numbers based on
+	CVS changes.
+
 2002-06-17  David N. Welton  <davidw@dedasys.com>
 
 	* src/make.tcl: Updated build scripts to build the HTML
